--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@inquirer/prompts": "^7.6.0",
     "@nuxt/eslint": "1.4.1",
     "@tailwindcss/vite": "^4.1.11",
-    "animejs": "^4.0.2",
+    "@tweakpane/core": "^2.0.5",
+    "animejs": "^4.2.2",
     "commander": "^14.0.0",
     "eslint": "^9.30.0",
     "handlebars": "^4.7.8",
+    "n8ao": "^1.10.1",
     "nuxt": "^3.17.5",
     "postprocessing": "^6.37.7",
     "tailwindcss": "^4.1.11",
     "three": "^0.177.0",
     "ts-mixer": "^6.0.4",
+    "tweakpane": "^4.0.5",
     "vite-tsconfig-paths": "^5.1.4",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
