--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "three": "^0.177.0",
     "ts-mixer": "^6.0.4",
     "tweakpane": "^4.0.5",
+    "vercel": "^49.1.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
